--- a/style/_reset.scss
+++ b/style/_reset.scss
@@ -3,8 +3,8 @@
 }
 
 :root {
-  --header-h: calc(2rem + env(safe-area-inset-top, 0px));
-  --nav-h: calc(3.5rem + env(safe-area-inset-bottom, 0px));
+  --header-h: calc(2.5rem + env(safe-area-inset-top, 0px));
+  --nav-h: calc(3rem + env(safe-area-inset-bottom, 0px));
 }
 
 html {
